build(deps): 補上 commons-lang3 並改用 StringUtils.isBlank
code-standards.md 要求字串判空一律用 StringUtils.isBlank,但全專案
pom.xml 從未宣告 commons-lang3 —— 規範與現況長期不符,Phase 3 執行時
executor 因缺依賴而繞道沿用手寫判空並回報此問題。

- stock-common 加入 commons-lang3(版本由 spring-boot-starter-parent
  BOM 管理,解析為 3.19.0,不自行指定);置於共用基底使 7 個下游模組
  無須各自宣告
- Phase 3 觸及的檔案改用 StringUtils.isBlank:TradeSortKey、
  SortDirection、TradingService(4 處)、TradingController(1 處)

範圍限定於 Phase 3 觸及的檔案。TradeType.java 的同類寫法屬既有技術債,
本次不動以免擴大 scope。

驗證:./mvnw -pl stock-start -am verify → 80 tests, 0 failures,
BUILD SUCCESS(行為不變的 refactor,既有測試即安全網)。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>