@@ -2,6 +2,7 @@ package dowob.xyz.stockwebv2.trading.domain;
 
 import dowob.xyz.stockwebv2.common.error.BusinessException;
 import dowob.xyz.stockwebv2.common.error.ErrorCode;
+import org.apache.commons.lang3.StringUtils;
 
 import java.util.Locale;
 
@@ -65,7 +66,7 @@ public enum TradeSortKey {
      *                           錯誤訊息刻意不回射原始輸入，避免反射式輸出
      */
     public static TradeSortKey fromApiValue(String value) {
-        if (value == null || value.isBlank()) {
+        if (StringUtils.isBlank(value)) {
             return EXECUTED_AT;
         }
         String normalized = value.trim().toUpperCase(Locale.ROOT);
